[package]
name = "polylinetogprmc"
version = "0.1.0"
authors = ["Sojan James <Sojan.James@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polyline = "0.7.0"
geo = "0.12.2"
clap = { git="https://github.com/clap-rs/clap" }
num-traits = "0.2.8"
chrono = "0.4"
time = "0.1.42"
